--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'me.tatarka.retrolambda'
-//apply plugin: 'com.jakewharton.butterknife'
+
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "myannie.com.anniecourse"
-        minSdkVersion 18
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,8 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation ('com.android.support:support-v4:27.1.1')
-    implementation ('com.android.support:design:27.1.1')
+    implementation('com.android.support:support-v4:27.1.1')
+    implementation('com.android.support:design:27.1.1')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.cjj.materialrefeshlayout:library:1.3.0'
     testImplementation 'junit:junit:4.12'
@@ -31,6 +30,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-//    implementation 'com.android.support:cardview-v7:2.1.1'
-
+    implementation 'com.github.codbking:CalendarExaple:v1.0.0'
 }
